New entries should be added at the top

2005-01-21 Refactored numerix to solve vexing namespace issues - JDH

2005-01-21 Applied Nadia's contour bug fix - JDH

2005-01-20 Made some changes to the contour routine - particularly
           region=1 seems t fix a lot of the zigzag strangeness.
           Added colormaps as default for contour - JDH

2005-01-19 Restored builtin names which were overridden (min, max,
           abs, round, and sum) in pylab.  This is a potentially
           significant change for those who were relying on an array
           version of those functions that previously overrode builtin
           function names. - ADS

2005-01-18 Added accents to mathtext: \hat, \breve, \grave, \bar,
           \acute, \tilde, \vec, \dot, \ddot.  All of them have the
           same syntax, eg to make an overbar you do \bar{o} or to
           make an o umlaut you do \ddot{o}. The shortcuts are also
           provided, eg: \"o \'e \`e \~n \.x \^y - JDH

2005-01-18 Plugged image resize memory leaks - JDH

2005-01-18 Fixed some mathtext parser problems relating to superscripts

2005-01-17 Fixed a yticklabel problem for colorbars under change of  
           clim - JDH
 
2005-01-17 Cleaned up Destroy handling in wx reducing memleak/fig from
           approx 800k to approx 6k- JDH

2005-01-17 Added kappa to latex_to_bakoma - JDH

2005-01-15 Support arbitrary colorbar axes and horizontal colorbars - JDH

2005-01-15 Fixed colormap number of colors bug so that the colorbar
           has the same discretization as the image - JDH

2005-01-15 Added Nadia's x,y contour fix - JDH

2005-01-15 backend_cairo: added PDF support which requires pycairo 0.1.4.
           Its not usable yet, but is ready for when the Cairo PDF backend 
	   matures - SC

2005-01-15 Added Nadia's x,y contour fix

2005-01-12 Fixed set clip_on bug in artist - JDH

2005-01-11 Reverted pythoninspect in tkagg - JDH

2005-01-09 Fixed a backend_bases event bug caused when an event is