@@ -1,4 +1,4 @@
-LICENSE AGREEMENT FOR MATPLOTLIB 0.70.1
+LICENSE AGREEMENT FOR MATPLOTLIB 0.71
 --------------------------------------
 
 1. This LICENSE AGREEMENT is between the John D. Hunter ("JDH"), and the
@@ -9,30 +9,30 @@ documentation.
 2. Subject to the terms and conditions of this License Agreement, JDH
 hereby grants Licensee a nonexclusive, royalty-free, world-wide license
 to reproduce, analyze, test, perform and/or display publicly, prepare
-derivative works, distribute, and otherwise use matplotlib 0.70.1
+derivative works, distribute, and otherwise use matplotlib 0.71
 alone or in any derivative version, provided, however, that JDH's
 License Agreement and JDH's notice of copyright, i.e., "Copyright (c)
 2002-2004 John D. Hunter; All Rights Reserved" are retained in
-matplotlib 0.70.1 alone or in any derivative version prepared by
+matplotlib 0.71 alone or in any derivative version prepared by
 Licensee.
 
 3. In the event Licensee prepares a derivative work that is based on or
-incorporates matplotlib 0.70.1 or any part thereof, and wants to
+incorporates matplotlib 0.71 or any part thereof, and wants to
 make the derivative work available to others as provided herein, then
 Licensee hereby agrees to include in any such work a brief summary of
-the changes made to matplotlib 0.70.1.
+the changes made to matplotlib 0.71.
 
-4. JDH is making matplotlib 0.70.1 available to Licensee on an "AS
+4. JDH is making matplotlib 0.71 available to Licensee on an "AS
 IS" basis.  JDH MAKES NO REPRESENTATIONS OR WARRANTIES, EXPRESS OR
 IMPLIED.  BY WAY OF EXAMPLE, BUT NOT LIMITATION, JDH MAKES NO AND
 DISCLAIMS ANY REPRESENTATION OR WARRANTY OF MERCHANTABILITY OR FITNESS
-FOR ANY PARTICULAR PURPOSE OR THAT THE USE OF MATPLOTLIB 0.70.1
+FOR ANY PARTICULAR PURPOSE OR THAT THE USE OF MATPLOTLIB 0.71
 WILL NOT INFRINGE ANY THIRD PARTY RIGHTS.
 
 5. JDH SHALL NOT BE LIABLE TO LICENSEE OR ANY OTHER USERS OF MATPLOTLIB
-0.70.1 FOR ANY INCIDENTAL, SPECIAL, OR CONSEQUENTIAL DAMAGES OR
+0.71 FOR ANY INCIDENTAL, SPECIAL, OR CONSEQUENTIAL DAMAGES OR
 LOSS AS A RESULT OF MODIFYING, DISTRIBUTING, OR OTHERWISE USING
-MATPLOTLIB 0.70.1, OR ANY DERIVATIVE THEREOF, EVEN IF ADVISED OF
+MATPLOTLIB 0.71, OR ANY DERIVATIVE THEREOF, EVEN IF ADVISED OF
 THE POSSIBILITY THEREOF.
 
 6. This License Agreement will automatically terminate upon a material
@@ -44,6 +44,6 @@ Licensee.  This License Agreement does not grant permission to use JDH
 trademarks or trade name in a trademark sense to endorse or promote
 products or services of Licensee, or any third party.
 
-8. By copying, installing or otherwise using matplotlib 0.70.1,
+8. By copying, installing or otherwise using matplotlib 0.71,
 Licensee agrees to be bound by the terms and conditions of this License
 Agreement.
