@@ -140,7 +140,7 @@ John D. Hunter <jdhunter@ace.bsd.uhicago.edu>
 Most of the other commands are from the Numeric, MLab and FFT, with
 the exception of those in mlab.py provided by matplotlib.
 """
-__version__  = '0.71rc1'
+__version__  = '0.71'
 __revision__ = '$Revision$'
 __date__     = '$Date$'
 
